--- a/sass/styles/header.scss
+++ b/sass/styles/header.scss
@@ -189,6 +189,18 @@ header {
           }
         }
     }
+    @media all and (max-width: 470px) {
+      .row .tab_button {
+         font-size: 0.8rem;
+         padding: 10px;
+       }
+     }
+     @media all and (max-width: 360px) {
+      .row .tab_button {
+         font-size: 0.5rem;
+         padding: 10px;
+       }
+     }
     .tabcontent {
         height:auto !important;
         padding:50px 0 0 0 !important;
