--- a/sass/styles/layout.scss
+++ b/sass/styles/layout.scss
@@ -20,11 +20,11 @@ body {
     position: relative;
   }
   .container-white-laurel, .container-white, .slick-twitter, .slick-slide {
-    z-index: 1;
+    z-index: 2;
     position: relative;
   }
   .schoolicon, .twitter-box .slick-controls, .main-navigation-wrapper {
-    z-index: 2;
+    z-index: 3;
     position: relative;
   }
   .homepage-tabs-nav, .home .tabcontent {
