--- a/sass/styles/responsive.scss
+++ b/sass/styles/responsive.scss
@@ -626,12 +626,6 @@ a[href^="tel"] {
             }
         }
     }
-    .homepage-tabs-nav {
-        .col {
-            font-size:0.65em;
-            padding:15px;
-        }
-    }
     .tabcontent {
         .container {
             .image {
